--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* CSS Reusable Class */
+.form-label{
+    @apply font-medium text-sm text-slate-800 mb-2;
+}
+.form-input{
+    @apply bg-gray-100 px-4 py-2 rounded outline-none w-full;
+}
